--- a/html/sif.css
+++ b/html/sif.css
@@ -1,114 +1,90 @@
 #main {
-position:absolute;
-width:960px;
-height:640px;
-overflow:hidden;
-border:1px solid black;
-display:block;
+  border: 1px solid black;
+  height: 640px;
+  overflow: hidden;
+  position: relative;
+  width: 960px;
 }
 
-#unit_page {
-position:absolute;
-background-image:url('img/bg.png');
-width:960px;
-height:640px;
-z-index:1;
+.page {
+  height: 100%;
+  position: absolute;
+  width: 100%;
 }
 
-.unit_member {
-position:absolute;
-top:177px;
-width:96px;
-height:96px;
-cursor:pointer;
+.member-page-side {
+  background: white;
+  height: 396px;
+  position: absolute;
+  top: 48px;
+  width: 84px;
+  z-index: 5;
 }
 
-#member_page {
-position:absolute;
-background-color:white;
-width:960px;
-height:640px;
-left:960px;
-overflow:hidden;
-opacity:0.0;
-z-index:2;
+.switch-page-img {
+  cursor: pointer;
+  position: relative;
+  top: 156px;
 }
 
-.switch {
-background-color:white;
-position:absolute;
-top:48px;
-width:84px;
-height:396px;
-z-index:5;
+.unit-member {
+  height: 96px;
+  width: 96px;
 }
 
-#previous_page {
-left:0px;
+.status-hp-bg {
+  background: #bbb;
 }
 
-#next_page {
-left:876px;
+.status-hp-text {
+  color: #e50;
+  text-shadow:
+    1px 1px 0 #fff, 1px -1px 0 #fff, -1px 1px 0 #fff, -1px -1px 0 #fff,
+    2px 0 0 #fff, 0 2px 0 #fff, -2px 0 0 #fff, 0 -2px 0 #fff;
 }
 
-.switch_img {
-position:absolute;
-top:156px;
-cursor:pointer;
+.status-smile-bg {
+  background: #fcc;
 }
 
-#member_list {
-position:absolute;
-top:48px;
-height:396px;
-z-index:3;
+.status-smile-text {
+  color: #ff74a6;
 }
 
-.member {
-position:absolute;
-width:132px;
-height:132px;
-cursor:pointer;
+.status-pure-bg {
+  background: #9ed;
 }
 
-.status {
-position:absolute;
-top:281px;
-height:30px;
-text-align:center;
-font-size:22px;
-line-height:30px;
-font-weight:bolder;
+.status-pure-text {
+  color: #0c3;
 }
 
-#hp {
-width:40px;
-left:103px;
-background-color:#BBBBBB;
-color:#EE5500;
-text-shadow:
-    1px 1px 0 #FFFFFF, 1px -1px 0 #FFFFFF, -1px 1px 0 #FFFFFF, -1px -1px 0 #FFFFFF,
-    2px 0 0 #FFFFFF, 0 2px 0 #FFFFFF, -2px 0 0 #FFFFFF, 0 -2px 0 #FFFFFF;
+.status-cool-bg {
+  background: #7ce;
 }
 
-#smile {
-width:100px;
-left:250px;
-background-color:#FFCCCC;
-color:#FF74A6;
+.status-cool-text {
+  color: #09e;
 }
 
-#pure {
-width:100px;
-left:496px;
-background-color:#99EEDD;
-color:#00CC33;
+.status-bonus-text {
+  color: red;
 }
 
-#cool {
-width:100px;
-left:742px;
-background-color:#77CCEE;
-color:#0099EE;
+.unit-status-panel {
+  height: 30px;
+  position: absolute;
+  text-align: center;
+  top: 281px;
+  line-height: 30px;
+}
+
+.unit-status-text-base {
+  font-size: 22px;
+  font-weight: bolder;
+}
+
+.unit-status-text-bonus {
+  font-size: 20px;
 }
 
